Add pg for Heroku purposes

--- a/config/database.yml
+++ b/config/database.yml
@@ -23,5 +23,10 @@ test:
   database: pokemon_test
 
 production:
-  <<: *default
+  adapter: postgresql
+  encoding: unicode
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   database: pokemon_prodcution
+  username: pokemon
+  password: <%= ENV['MYAPP_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
