--- a/config/database.yml
+++ b/config/database.yml
@@ -1,25 +1,17 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-#
 default: &default
   adapter: mysql2
   username: root
   password: dummy
+  host: <%= ENV['DB_MYSQL_HOST'] || '127.0.0.1' %>
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   timeout: 5000
 
 development:
   <<: *default
-  database: pokemon_deveolemnt
+  database: pokemon_development
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  <<: *default
+  port: <%= ENV.fetch('MYSQL_PORT', 3306) %>
   database: pokemon_test
 
 production:
